# ChatAppRust

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.github/workflows/: ci.yml
frontend/src/: App.tsx  index.tsx
frontend/src/components/: TodoList.tsx  types.ts
frontend/src/components/dialogs/: TodoDetails.tsx
