[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
bson = "2.6.1"
mongodb = "2.5.0"
once_cell = "1.17.2"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
